--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ImageManipulationsActivity"></activity>
+        <activity android:name=".ImageManipulationsActivity" />
+        <activity android:name=".DispCoord"></activity>
     </application>
-
 
 </manifest>
